#262: Added CommandSecurityDefinitions to Filter Step Destination UCs